...
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/playlist_card_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_tv" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_playlist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:theme="@style/Fab_Style"
        app:layout_constraintVertical_bias=".92"
        app:layout_constraintHorizontal_bias=".9"
...
