...
        android:id="@+id/songsFragment"
        android:name="com.jesse.musicplaylist.screens.songs.SongsFragment"
        android:label="@string/songs_label"
        tools:layout="@layout/fragment_songs">
        <action
            android:id="@+id/action_playlistFragment_to_playlistSongsFragment"
            app:destination="@id/playlistSongsFragment"
            />
        <action
            android:id="@+id/action_playlistSongsFragment_to_addSongActivity"
            app:destination="@id/addSongActivity" />
    </fragment>
    <fragment
...
